<resources>
    <string name="app_name">AndroidTraining_092017</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="import_photos">Import Photos</string>
    <string name="name_and_surname">Name And Surname</string>
    <string name="phone">Phone</string>
    <string name="time_line">TimeLine</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_login">Wellcome</string>
</resources>
