<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivRegister"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:background="@color/black" />

    <EditText
        android:id="@+id/etRegisterNAS"
        style="@style/LayoutExercise"
        android:hint="@string/name_and_surname" />

    <EditText
        android:id="@+id/etRegisterEA"
        style="@style/LayoutExercise"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etRegisterP"
        style="@style/LayoutExercise"
        android:hint="@string/phone"
        android:inputType="number" />

    <EditText
        android:id="@+id/etRegisterPW"
        style="@style/LayoutExercise"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bRegister"
        style="@style/LayoutExercise"
        android:text="@string/register"
        android:textColor="@color/black" />

</LinearLayout>
