<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etLoginEA"
        style="@style/LayoutExercise"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etLoginPW"
        style="@style/LayoutExercise"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bLogin"
        style="@style/LayoutExercise"
        android:text="@string/login"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvLoginR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/register"
        android:textColor="@color/white" />


</LinearLayout>

